# fp-benchmarks-imperial

./: .gitignore  CMakeLists.txt  README.md
gsl/: CMakeLists.txt  configure-wrapper.sh.in
gsl/benchmarks/: CMakeLists.txt
gsl/benchmarks/blas/: blas-sym.c  spec.yml
gsl/benchmarks/differentiation/: diff.c  spec.yml
gsl/benchmarks/histogram2d/: histogram2d-sym.c  spec.yml
gsl/benchmarks/integration/: integration-sym.c  spec.yml
gsl/benchmarks/polyroots/: polyroots-sym.c  spec.yml
gsl/benchmarks/sort_smallest/: sort_smallest.c  spec.yml
gsl/benchmarks/sparse_matrices/: spec.yml  spmatrix.c
gsl/benchmarks/statistics/: spec.yml  stat.c
gsl/benchmarks/statistics_full_sym/: spec.yml  stat.c
gsl/benchmarks/vectors/: spec.yml  vector_example.c
gsl/benchmarks/vectors_full_sym/: spec.yml  vector_example.c
gsl/gsl-2.1/: build.sh
gsl/gsl-2.1/doc/examples/: build.sh
gsl/gsl-2.1/statistics/: mean_source.c  variance_source.c
svcomp/: CMakeLists.txt
svcomp/float-benchs/: CMakeLists.txt  README.txt
svcomp/float-benchs/addsub/: addsub.c  spec.yml
svcomp/float-benchs/arctan_Pade/: arctan_Pade.c  spec.yml
svcomp/float-benchs/bary_diverge/: bary_diverge.c  spec.yml
svcomp/float-benchs/cos_polynomial/: cos_polynomial.c  spec.yml
svcomp/float-benchs/divmul_diverge/: divmul_diverge.c  spec.yml
svcomp/float-benchs/exp_loop/: exp_loop.c  spec.yml
svcomp/float-benchs/feedback_diverge/: feedback_diverge.c  spec.yml
svcomp/float-benchs/filter1/: filter1.c  spec.yml
svcomp/float-benchs/filter2_set/: filter2_set.c  spec.yml
svcomp/float-benchs/image_filter/: image_filter.c  spec.yml
svcomp/float-benchs/interpolation2/: interpolation2.c  spec.yml
svcomp/float-benchs/inv_sqrt_quake/: inv_sqrt_quake.c  spec.yml
svcomp/float-benchs/mea8000/: mea8000.c  spec.yml
svcomp/float-benchs/rlim_invariant/: rlim_invariant.c  spec.yml
svcomp/float-benchs/sin_interpolated_bigrange_tight/: sin_interpolated_bigrange_tight.c  spec.yml
svcomp/float-benchs/sqrt_householder_interval/: spec.yml  sqrt_householder_interval.c
synthetic/: CMakeLists.txt
synthetic/count/: count.c  spec.yml
synthetic/fadd_to_exact_zero/: fadd_to_exact_zero.c  spec.yml
synthetic/fsub_to_exact_zero/: fsub_to_exact_zero.c  spec.yml
synthetic/interval/: interval.c  spec.yml
synthetic/matrix_inverse/: README.md  matrix_inverse.c  spec.yml
synthetic/memcpy_and_check_all_ones_significand/: memcpy_and_check_all_ones_significand.c  spec.yml
synthetic/memcpy_and_use_as_bitvector/: memcpy_and_use_as_bitvector.c  spec.yml
synthetic/non-terminating/: non-terminating.c  spec.yml
synthetic/paranoia/: paranoia.c  spec.yml
synthetic/prefix_sum/: prefix_sum.c  spec.yml
synthetic/rounding_sqrt/: rounding_sqrt.c  spec.yml
synthetic/sorted_search/: sorted_search.c  spec.yml
synthetic/sqrt/: spec.yml  sqrt.c
synthetic/sqrt_inf_nan_zeros/: spec.yml  sqrt_inf_nan_zeros.c
synthetic/sum_is_commutative/: spec.yml  sum_is_commutative.c
synthetic/sum_is_not_associative/: spec.yml  sum_is_not_associative.c
synthetic/vanishing/: spec.yml  vanishing.c
